[gd_scene load_steps=16 format=2]

[ext_resource path="res://enemies/ron/ron_enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/ron_enemy.png" type="Texture" id=2]
[ext_resource path="res://assets/sfx/ron_shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://enemies/ron/states/cooldown.gd" type="Script" id=4]
[ext_resource path="res://enemies/ron/states/run.gd" type="Script" id=5]
[ext_resource path="res://enemies/ron/states/shoot.gd" type="Script" id=6]
[ext_resource path="res://enemies/ron/states/hit.gd" type="Script" id=7]
[ext_resource path="res://enemies/ron/states/dead.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 36 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 2 )

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/ron_enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/ron_enemy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/ron_enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/ron_enemy:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/ron_enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 28, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotate/ron_enemy:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("shoot_sfx")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.5 )
}

[node name="ron_snow_enemy" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="rotate" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="hitbox" type="Area2D" parent="rotate"]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 16

[node name="hitbox_collision" type="CollisionShape2D" parent="rotate/hitbox"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="damagebox" type="Area2D" parent="rotate"]
visible = false
collision_layer = 4
collision_mask = 0

[node name="damage_collision" type="CollisionShape2D" parent="rotate/damagebox"]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="detect_player" type="Area2D" parent="rotate"]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="detect_box" type="CollisionShape2D" parent="rotate/detect_player"]
position = Vector2( 28, -20 )
shape = SubResource( 3 )

[node name="ron_enemy" type="Sprite" parent="rotate"]
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
vframes = 8
hframes = 8
frame = 25
__meta__ = {
"_edit_lock_": true
}

[node name="ray_front" type="RayCast2D" parent="rotate"]
visible = false
position = Vector2( 4, -2 )
enabled = true
cast_to = Vector2( 2, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="ray_down" type="RayCast2D" parent="rotate"]
visible = false
position = Vector2( 5, -1 )
enabled = true
cast_to = Vector2( 0, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="firepos" type="Position2D" parent="rotate"]
position = Vector2( 0, -7 )
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -2 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 5 )
anims/run = SubResource( 6 )
anims/shoot = SubResource( 7 )

[node name="shoot_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
bus = "sfx"

[node name="states" type="Node" parent="."]

[node name="cooldown" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="run" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="shoot" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="hit" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="dead" type="Node" parent="states"]
script = ExtResource( 8 )
[connection signal="area_entered" from="rotate/hitbox" to="." method="_on_hitbox_area_entered" flags=3]
[connection signal="body_entered" from="rotate/detect_player" to="." method="_on_detect_player_body_entered" flags=3]
[connection signal="body_exited" from="rotate/detect_player" to="." method="_on_detect_player_body_exited" flags=3]
